--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "purple"
+    }
+  },
+  "defaultProject": "purple",
+  "cli": {
+    "analytics": "1cc823cc-ac43-4ee5-b6cc-dfe8fa361ebd"
+  }
 }
